<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_dim"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_dim"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/paycard"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/back_corner"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/half_width"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_pay" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="40dp"
                    android:gravity="center"
                    android:text="@string/payandreceive"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/half_width"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/ic_wallet" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/wallet"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/money"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/txservice"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white_dim"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/whitepad_top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/txservice" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/one_third_width"
                    android:layout_height="match_parent"
                    android:background="@drawable/whitepad"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_creditcard" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/credit_payment" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/one_third_width"
                    android:layout_height="match_parent"
                    android:background="@drawable/whitepad"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/phone_payment" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/one_third_width"
                    android:layout_height="match_parent"
                    android:background="@drawable/whitepad"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_finance" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/finance" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/one_third_width"
                    android:layout_height="match_parent"
                    android:background="@drawable/whitepad"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_life" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/life" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/one_third_width"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/whitepad"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_qq" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/qq" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/one_third_width"
                    android:layout_height="match_parent"
                    android:background="@drawable/whitepad"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_city" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/city_service" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="@dimen/one_third_width"
                    android:layout_height="match_parent"
                    android:background="@drawable/whitepad_bottomleft"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_charity" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txcharity" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/two_third_width"
                    android:layout_height="match_parent"
                    android:background="@drawable/whitepad_bottomrigjt"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>